src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ZoomInfo_Management_Level_contact__c</fullName>
        <label>ZoomInfo Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Number_of_Banks_contact__c</fullName>
        <label>ZoomInfo Number of Banks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Number_of_Credit_Unions_contact__c</fullName>
        <label>ZoomInfo Number of Credit Unions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Number_of_Locations__c</fullName>
        <label>ZoomInfo Number of Locations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_City_contact__c</fullName>
        <label>ZoomInfo Person City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Country_contact__c</fullName>
        <label>ZoomInfo Person Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_ID_contact__c</fullName>
        <label>ZoomInfo Person ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Image_URL_contact__c</fullName>
        <label>ZoomInfo Person Image URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_State_contact__c</fullName>
        <label>ZoomInfo Person State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Street_contact__c</fullName>
        <label>ZoomInfo Person Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Zip_Code_contact__c</fullName>
        <label>ZoomInfo Person Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Technology_Products_contact__c</fullName>
        <label>ZoomInfo Technology Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Top_100_Law_Firms_by_Revenue_co__c</fullName>
        <label>ZoomInfo Top 100 Law Firms by Revenue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Website_contact__c</fullName>
        <label>ZoomInfo Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Within_EU_contact__c</fullName>
        <label>ZoomInfo Within EU</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Notes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/affectlayer__AffectLayerNotes?objectId=&apos; &amp; Id &amp; &apos;&amp;objectType=Contact&apos; &amp; &apos;&amp;accountId=&apos; &amp;  Account.Id , &apos;Listen To Call&apos;, &apos;_self&apos;)</formula>
        <label>AffectLayer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__IsCreatedByChorusZI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the contact was created by Chorus or Zoominfo.</description>
        <label>Created by ChorusZI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>asknicely__CSAT_Last_Responded__c</fullName>
        <label>CSAT Last Responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>asknicely__CSAT_SurveyTag__c</fullName>
        <label>CSAT Survey Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asknicely__CSAT_Type__c</fullName>
        <label>CSAT Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asknicely__FIVESTAR_Last_Responded__c</fullName>
        <label>Five Star Last Responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>asknicely__FIVESTAR_SurveyTag__c</fullName>
        <label>Five Star Survey Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asknicely__FIVESTAR_Type__c</fullName>
        <label>Five Star Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asknicely__NPS_Last_Responded__c</fullName>
        <label>NPS Last Responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>asknicely__NPS_SurveyTag__c</fullName>
        <label>NPS Survey Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asknicely__NPS_Type__c</fullName>
        <description>Promoter - Contacted scored 9-10
Passive - Contacted scored 7-8
Detractor -Contacted scored 0-6</description>
        <inlineHelpText>Whether a customer is a promoter, passive or detractor</inlineHelpText>
        <label>NPS Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asknicely__csat_comment__c</fullName>
        <label>CSAT Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asknicely__csatscore__c</fullName>
        <label>CSAT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>asknicely__fivestar_comment__c</fullName>
        <label>Five Star Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asknicely__fivestarscore__c</fullName>
        <label>Five Star Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>asknicely__nps_comment__c</fullName>
        <description>The last comment from this customer</description>
        <label>NPS Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asknicely__npsscore__c</fullName>
        <description>Last NPS Score</description>
        <label>NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dynamic_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dynamic checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>eContacts__Secondary_Image__c</fullName>
        <label>Image Data2 Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Paid_RE_Subscription_Services_Used__c</fullName>
        <inlineHelpText>How many paid real estate research/data subscription services do you currently use?</inlineHelpText>
        <label># of Paid RE Subscription Services Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2-3</fullName>
                </value>
                <value>
                    <fullName>4-5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>opted_out_of_email_distros__c</fullName>
        <inlineHelpText>used to find the WP1 impacted users that were opted out of all email distros accidentally.</inlineHelpText>
        <label>opted out of email distros</label>
        <summaryFilterItems>
            <field>Contact_Email_Distribution__c.Name</field>
            <operation>notContain</operation>
            <value>week in review</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contact_Email_Distribution__c.Name</field>
            <operation>notContain</operation>
            <value>Alert</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contact_Email_Distribution__c.Opt_Out__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Email_Distribution__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <inlineHelpText>Test Description</inlineHelpText>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Has_Moved__c</fullName>
        <description>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</description>
        <inlineHelpText>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
        <defaultValue>&apos;Not Compared&apos;</defaultValue>
        <label>ZoomInfo Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email address for the Contact record.</description>
        <inlineHelpText>ZoomInfo Email address for the Contact record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
        <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
        <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
        <label>ZoomInfo Last Clean Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Contact record.</description>
        <inlineHelpText>ZoomInfo Phone for the Contact record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Zoom_Clean_Status__c</fullName>
        <label>ZoomInfo Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Compared</fullName>
                    <color>#AFCADF</color>
                    <default>true</default>
                    <label>Not Compared</label>
                </value>
                <value>
                    <fullName>Different</fullName>
                    <color>#F3D904</color>
                    <label>Different</label>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                    <color>#78C953</color>
                    <label>In Sync</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#EFAE73</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Clean</fullName>
                    <color>#009900</color>
                    <label>Clean</label>
                </value>
                <value>
                    <fullName>Company Clean Only</fullName>
                    <color>#33CC00</color>
                    <label>Company Clean Only</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#FF0000</color>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AB_Business_Development_Activity</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>AB</value>
        </filters>
        <label>AB Business Development Activity</label>
    </listViews>
    <listViews>
        <fullName>Abigail_Root_Business_Development</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>ARBD</value>
        </filters>
        <label>Abigail Root Business Development</label>
    </listViews>
    <listViews>
        <fullName>Advertising_Business_Development</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Company_Type_Contact__c</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>JMBD</value>
        </filters>
        <label>Advertising Business Development</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Account_Type__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>Activate_Contact__c</columns>
        <columns>Activation_Date__c</columns>
        <columns>SalesLoft1__Active_Contact__c</columns>
        <columns>GSA_Analyst__c</columns>
        <columns>List_Membership__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>DO NOT CALL</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BDR_CC</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>CC</value>
        </filters>
        <label>BDR – CC</label>
        <sharedTo>
            <role>BDR</role>
            <role>BDR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BS_Business_Development_Activity</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>BS</value>
        </filters>
        <label>BS Business Development Activity</label>
    </listViews>
    <listViews>
        <fullName>Casey_Searl_Business_Development</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>Next_Steps__c</columns>
        <columns>List_Membership__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>CRSBD</value>
        </filters>
        <label>Casey Searl – Business Development</label>
        <sharedTo>
            <roleAndSubordinates>BDR_Manager</roleAndSubordinates>
            <roleAndSubordinates>Sales_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_to_Mass_Deactivate</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>Activate_Contact__c</columns>
        <columns>To_Deactivate_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>To_Deactivate_On__c</field>
            <operation>equals</operation>
            <value>11/18/2021</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>Activate_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contacts to Mass Deactivate</label>
        <sharedTo>
            <role>Commercial_Operations</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_to_Work</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>VIP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contacts to Work</label>
        <sharedTo>
            <role>BDR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_Copy_of_User_List_Updates</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account.GSA_ID__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>User_List__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>Activate_Contact__c</columns>
        <columns>Username__c</columns>
        <columns>GSA_ID__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>Loaded__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>Sixth Street Partners LLC</value>
        </filters>
        <filters>
            <field>User_List__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Copy of Copy of User List Updates</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_POD3</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>POD3</value>
        </filters>
        <label>POD3</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_User_List_Updates3</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>User_List__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>Activate_Contact__c</columns>
        <columns>Username__c</columns>
        <columns>GSA_ID__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>Attended_Training_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>HSBC Global Asset Management (NA)</value>
        </filters>
        <label>Copy of User List Updates</label>
        <sharedTo>
            <role>Commercial_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Duplicate_Contacts_JLL_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>JLL</value>
        </filters>
        <label>Duplicate Contacts JLL View</label>
    </listViews>
    <listViews>
        <fullName>EU_Check_Back_Later</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>EU CBL</value>
        </filters>
        <label>EU | Check Back Later</label>
    </listViews>
    <listViews>
        <fullName>EU_Scheduled_Meetings</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>List_Membership__c</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>List_Membership__c</field>
            <operation>equals</operation>
            <value>EU Meeting</value>
        </filters>
        <label>EU | Scheduled Meetings</label>
        <sharedTo>
            <group>EU_Sales</group>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Activate_Contact</fullName>
        <active>false</active>
        <description>If Activate Contact Checked true, make Username &amp; Account Activation Required</description>
        <errorConditionFormula>AND(
  Activate_Contact__c  = TRUE,
OR(
      ISBLANK(  Username__c ),
      ISPICKVAL( Account.Account_Status__c ,&quot;Active&quot;)
)
)</errorConditionFormula>
        <errorMessage>Username must be filled out and Account must be Active before you can activate the Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Datalink_of_Website_Access_Required</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
Activate_Contact__c &amp;&amp; NOT(DataLink_Access_Del__c) &amp;&amp; NOT( Website_Access_del__c ),
true,
false
)</errorConditionFormula>
        <errorMessage>Before activating a contact, access for at least one needs to be specified. Datalink or Website or both!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deactivate_Contact_Before_Moving</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( ISPICKVAL(Contact_Status__c, &quot;Active&quot;)),
OR( PRIORVALUE( AccountId ) &lt;&gt;  AccountId ))</errorConditionFormula>
        <errorMessage>You must deactivate this user before moving them to a new account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fields_Required_to_Create_Salesforce_Use</fullName>
        <active>true</active>
        <errorConditionFormula>Salesforce_User__c == true &amp;&amp;
(ISPICKVAL(User_Department__c, &apos;&apos;)  ||   
ISPICKVAL(Timezone__c, &apos;&apos;) || ISBLANK( Manager__c ) )</errorConditionFormula>
        <errorMessage>Field from Salesforce User section cannot be blank if Salesforce User is Checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>false</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>